removed inline styling

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Security</a></li>
       </ol>
-      <p style="padding-bottom: 5px;">
+      <p id="footer-rights">
         © 2020 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB,
         TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc.
       </p>
