made some validation correction

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button><i class="fas fa-lock"></i> Sign In</button>
     </nav>
     <main>
-      <section class="intuit-logos">
+      <div class="intuit-logos">
         <img
           id="intuit-logo"
           alt="intuit-logo"
@@ -52,7 +52,7 @@
           </li>
           <li><p class="m-q-t-text external-link">turbotax</p></li>
         </ol>
-      </section>
+      </div>
 
       <section class="form-div">
         <div class="form-header">
